Prevent over-sized logos from overlapping the user panel buttons

--- a/wcfsetup/install/files/style/layout/pageHeader.scss
+++ b/wcfsetup/install/files/style/layout/pageHeader.scss
@@ -318,6 +318,9 @@
 		
 		.pageHeaderLogoSmall {
 			max-height: 30px;
+			
+			/* prevent over-sized logos from overlapping the user panel buttons */
+			max-width: 100%;
 		}
 	}
 }
